--- a/resource/page_yaml/calculator_page.yaml
+++ b/resource/page_yaml/calculator_page.yaml
@@ -1,8 +1,4 @@
-calculator: /html/body/div[7]/div/div[10]/div/div[2]/div[2]/div/div/div[1]/div/div/div[1]/div/div
-input_calc: /html/body/div[7]/div/div[10]/div/div[2]/div[2]/div/div/div[1]/div/div/div[1]/div/div/div[1]/div[2]/div[2]/div/div/span
-button: //*[@id="rso"]/div[1]/div/div/div[1]/div/div/div[3]/div/table[2]/tbody/tr[4]/td[%s]/div/div
-button_mul: //*[@id="rso"]/div[1]/div/div/div[1]/div/div/div[3]/div/table[2]/tbody/tr[3]/td[4]/div/div
-button_minus: //*[@id="rso"]/div[1]/div/div/div[1]/div/div/div[3]/div/table[2]/tbody/tr[4]/td[4]/div/div
-button_plus: //*[@id="rso"]/div[1]/div/div/div[1]/div/div/div[3]/div/table[2]/tbody/tr[5]/td[4]/div/div
-button_equals: //*[@id="rso"]/div[1]/div/div/div[1]/div/div/div[3]/div/table[2]/tbody/tr[5]/td[3]/div/div
-memory_string: //*[@id="rso"]/div[1]/div/div/div[1]/div/div/div[1]/div[2]/div[1]/div/span
+input_calc: //span[@id='cwos']
+button: (//div[@role='button'][normalize-space()='%s'])[1]
+button_action: (//div[@aria-label='%s'])[1]
+memory_string: (//span[@class='vUGUtc'])[1]
